# autofix-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  requirements.txt
app/: __init__.py  config.py  main.py  schemas.py
app/services/: __init__.py  analyzer.py  fix_orchestrator.py  github_service.py  slack_service.py
autofix_agent/: __init__.py  agent.py  config.py  schemas.py
config/: projects.yaml.example
